--- a/app/assets/stylesheets/modals.scss
+++ b/app/assets/stylesheets/modals.scss
@@ -7,7 +7,7 @@
   width: 1000px;
   /* margin-top: 15%; */
   @media (max-width: 992px) {
-      width: 85%;
+    width: 90%;
   }
 
   .btn {
